# todo_api

./: .gitignore  Cargo.toml  Makefile  README.md  env_sample
docker/: Dockerfile  docker-compose.yaml  env_sample
migrations/: 0001_todo_db_up.sql  0002_todo_db_up.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/task/: mod.rs
src/api/task_history/: mod.rs
src/api/task_status/: mod.rs
src/db/: mod.rs
src/db/task/: mod.rs
src/db/task_history/: mod.rs
src/db/task_status/: mod.rs
src/db/task_task_status/: mod.rs
src/pong/: mod.rs
src/spec/: open_api.yaml
src/todo/: mod.rs
