[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.sqlx]
version = "0.8.2"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
    "json",
]
